--- a/styles/main2.scss
+++ b/styles/main2.scss
@@ -6,6 +6,10 @@
   //   font-family: 'ReformaGroteskMediumC';
   margin-bottom: 150px;
 
+  &-item {
+    width: 100%;
+  }
+
   &-title {
     font-size: 48px;
     color: #00c864;
@@ -22,16 +26,11 @@
     margin-bottom: 36px;
   }
 
-  //   &-description2 {
-  //     width: 90%;
-  //   }
-
   &-text {
     padding-bottom: 50px;
     font-size: 16px;
     color: #a9c5cc;
     text-align: justify;
-    // margin-bottom: 16px;
 
     box-sizing: border-box;
     line-height: 1.3;
@@ -80,7 +79,7 @@
   &-description3_table .product-text,
   &-description4_table .product-text {
     padding-bottom: 25px;
-    padding-right: 50px;
+    // padding-right: 50px;
     text-align: left;
   }
 
@@ -92,17 +91,26 @@
     margin-bottom: 36px;
 
     &_table {
-      display: grid;
-      grid-template-columns: 20px 1fr 20px 2fr 100px;
-      grid-template-rows: repeat(4, 1fr);
+      display: flex;
+      // display: grid;
+      // grid-template-columns: 20px 1fr 20px 2fr;
+      // grid-template-rows: repeat(4, 1fr);
       padding-top: 25px;
       padding-bottom: 25px;
+      gap: 50px;
+
+      &__left,
+      &__right {
+        display: flex;
+      }
     }
 
     &_table2 {
-      display: grid;
-      grid-template-columns: 20px 1fr 100px;
-      grid-template-rows: repeat(3, 1fr);
+      display: flex;
+      
+      // display: grid;
+      // grid-template-columns: 20px 1fr;
+      // grid-template-rows: repeat(3, 1fr);
     }
 
     &_right {
@@ -116,6 +124,10 @@
     padding-bottom: 20px;
   }
 
+  // &-description3 .product-text {
+  //   width: 50%;
+  // }
+
   &-description4 {
     background-color: #1a2549;
     padding-top: 25px;
@@ -124,9 +136,11 @@
     // margin-bottom: 36px;
 
     &_table {
-      display: grid;
-      grid-template-columns: 20px 1fr 20px 1fr;
-      grid-template-rows: repeat(3, 1fr);
+      display: flex;
+      gap: 50px;
+      // display: grid;
+      // grid-template-columns: 20px 1fr 20px 1fr;
+      // grid-template-rows: repeat(3, 1fr);
       //   padding-top: 25px;
       //   padding-bottom: 25px;
     }
@@ -134,5 +148,34 @@
 
   &-description4 .product-text {
     color: #00c864;
+  }
+}
+
+@media (max-width: 1050px) {
+  .product-description1,
+  .product-description2 {
+    flex-direction: column;
+  }
+
+  .product-description1_left,
+  .product-description2_left,
+  .product-description2_right {
+    width: auto;
+    padding-bottom: 0px;
+    margin-bottom: 30px;
+  }
+
+  .product-description3 .product-text {
+    width: auto;
+  }
+}
+
+@media (max-width: 430px) {
+  .product-description3_table,
+  .product-description4_table {
+    // display: flex;
+    flex-direction: column;
+    gap: 0px;
+    padding-bottom: 0px;
   }
 }
