--- a/styles/main2.scss
+++ b/styles/main2.scss
@@ -1,3 +1,9 @@
+.products {
+  margin-top: 250px;
+  position: relative;
+  margin-bottom: 150px;
+}
+
 .product {
   padding-top: 15px;
   display: flex;
@@ -26,9 +32,13 @@
     margin-bottom: 36px;
   }
 
+  // &-description1_left .product-text {
+  //   font-size: 24px;
+  // }
+
   &-text {
     padding-bottom: 50px;
-    font-size: 16px;
+    font-size: 20px;
     color: #a9c5cc;
     text-align: justify;
 
@@ -38,6 +48,9 @@
 
   &-description1_left {
     width: 60%;
+  }
+  &-description1_right {
+    width: 40%;
   }
 
   &-subtitle {
@@ -56,7 +69,9 @@
   }
 
   &-description2_left .product-subtitle,
-  &-description2_left .product-text {
+  &-description2_left .product-text,
+  &-description3 .product-subtitle,
+  &-description3 .product-text {
     color: #000;
   }
 
@@ -107,7 +122,7 @@
 
     &_table2 {
       display: flex;
-      
+
       // display: grid;
       // grid-template-columns: 20px 1fr;
       // grid-template-rows: repeat(3, 1fr);
@@ -118,9 +133,7 @@
     }
   }
 
-  &-description3 .product-subtitle,
-  &-description3 .product-text {
-    color: #fff;
+  &-description3 .product-subtitle {
     padding-bottom: 20px;
   }
 
@@ -157,6 +170,10 @@
     flex-direction: column;
   }
 
+  .product-description1_right {
+    width: 100%;
+  }
+
   .product-description1_left,
   .product-description2_left,
   .product-description2_right {
@@ -178,4 +195,8 @@
     gap: 0px;
     padding-bottom: 0px;
   }
+}
+
+.item__row {
+  display: flex;
 }
