--- a/styles/main2.scss
+++ b/styles/main2.scss
@@ -61,6 +61,7 @@
 
   &-description2_left {
     background-color: #00c864;
+    opacity: 0.6;
     width: 50%;
     padding-top: 25px;
     padding-left: 15px;
@@ -100,6 +101,7 @@
 
   &-description3 {
     background-color: #00c864;
+    opacity: 0.6;
     padding-top: 25px;
     padding-left: 25px;
     padding-right: 35px;
