--- a/styles/main2.css
+++ b/styles/main2.css
@@ -47,8 +47,7 @@
   margin-bottom: 25px;
 }
 .product-description2_left {
-  background-color: #00c864;
-  opacity: 0.6;
+  background-color: #118c57;
   width: 50%;
   padding-top: 25px;
   padding-left: 15px;
@@ -56,7 +55,7 @@
   padding-bottom: 200px;
 }
 .product-description2_left .product-subtitle, .product-description2_left .product-text, .product-description3 .product-subtitle, .product-description3 .product-text {
-  color: #000;
+  color: #fff;
 }
 .product-description2_right {
   background-color: #1a2549;
@@ -73,8 +72,7 @@
   text-align: left;
 }
 .product-description3 {
-  background-color: #00c864;
-  opacity: 0.6;
+  background-color: #118c57;
   padding-top: 25px;
   padding-left: 25px;
   padding-right: 35px;
@@ -108,8 +106,8 @@
   display: flex;
   gap: 50px;
 }
-.product-description4 .product-text {
-  color: #00c864;
+.product-description4 .product-subtitle, .product-description4 .product-text {
+  color: #fff;
 }
 
 @media (max-width: 1050px) {
