--- a/styles/main2.scss
+++ b/styles/main2.scss
@@ -60,8 +60,8 @@
   }
 
   &-description2_left {
-    background-color: #00c864;
-    opacity: 0.6;
+    background-color: #118c57;
+    // opacity: 0.6;
     width: 50%;
     padding-top: 25px;
     padding-left: 15px;
@@ -73,7 +73,7 @@
   &-description2_left .product-text,
   &-description3 .product-subtitle,
   &-description3 .product-text {
-    color: #000;
+    color: #fff;
   }
 
   &-description2_right {
@@ -100,8 +100,8 @@
   }
 
   &-description3 {
-    background-color: #00c864;
-    opacity: 0.6;
+    background-color: #118c57;
+    // opacity: 0.6;
     padding-top: 25px;
     padding-left: 25px;
     padding-right: 35px;
@@ -161,8 +161,9 @@
     }
   }
 
+  &-description4 .product-subtitle,
   &-description4 .product-text {
-    color: #00c864;
+    color: #fff;
   }
 }
 
