--- a/styles/main2.css
+++ b/styles/main2.css
@@ -143,6 +143,7 @@
 
 .news {
   margin-bottom: 150px;
+  font-family: "Uni Sans Regular";
 }
 .news__item {
   padding-top: 20px;
@@ -168,6 +169,8 @@
   display: flex;
   flex-direction: row;
   background-color: #fff;
+  margin: 0 auto;
+  padding: 20px;
 }
 .news__logo-img {
   width: 180px;
@@ -201,5 +204,11 @@
   }
   .logo {
     justify-content: center;
+  }
+}
+@media (max-width: 488px) {
+  .news__logo {
+    flex-direction: column;
+    align-items: center;
   }
 }/*# sourceMappingURL=main2.css.map */
