--- a/styles/main2.scss
+++ b/styles/main2.scss
@@ -207,6 +207,7 @@
 
 .news {
   margin-bottom: 150px;
+  font-family: 'Uni Sans Regular';
 
   &__item {
     padding-top: 20px;
@@ -236,6 +237,8 @@
     display: flex;
     flex-direction: row;
     background-color: #fff;
+    margin: 0 auto;
+    padding: 20px;
 
     &-img {
       width: 180px;
@@ -274,5 +277,13 @@
 
   .logo {
     justify-content: center;
+  }
+}
+
+@media (max-width: 488px) {
+  .news__logo {
+    flex-direction: column;
+    align-items: center;
+    // margin-bottom: 50px;
   }
 }
